# advent-of-code

./: Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml
advent-of-code-2021/d02-dive/: part2.py
advent-of-code-2021/d07-the-treachery-of-whale/: main.py
advent-of-code-2021/d08-seven-segment-search/: main.py
advent-of-code-2021/d15-chiton/: main.go
advent-of-code-2021/d18-snailfish/: Cargo.toml
advent-of-code-2021/d25-sea-cucumber/: main.py
advent-of-code-2022/: Cargo.toml  README.md
advent-of-code-2022/d01-calorie-counting/: Cargo.toml
advent-of-code-2022/d02-rock-paper-scissors/: Cargo.toml
advent-of-code-2022/d03-rucksack-reorganization/: Cargo.toml
advent-of-code-2022/d04-camp-cleanup/: Cargo.toml
advent-of-code-2022/d05-supply-stacks/: Cargo.toml
advent-of-code-2022/d06-tuning-trouble/: Cargo.toml
advent-of-code-2022/d07-no-space-left-on-device/: Cargo.toml
advent-of-code-2022/d08-treetop-tree-house/: Cargo.toml
advent-of-code-2022/d09-rope-bridge/: Cargo.toml
advent-of-code-2022/d10-cathode-ray-tube/: Cargo.toml
advent-of-code-2022/d11-monkey-in-the-middle/: Cargo.toml
advent-of-code-2022/d12-hill-climbing-algorithm/: Cargo.toml
advent-of-code-2022/d13/: Cargo.toml
advent-of-code-2022/d13-distress-signal/: Cargo.toml
advent-of-code-2022/d14-regolith-reservoir/: Cargo.toml
advent-of-code-2022/d16-proboscidea-volcanium/: Cargo.toml
advent-of-code-2022/d17/: Cargo.toml
advent-of-code-2022/d17-pyroclastic-flow/: Cargo.toml
advent-of-code-2022/d18-2021/: Cargo.toml
advent-of-code-2022/d18-boiling-boulders/: Cargo.toml
advent-of-code-2022/d19/: Cargo.toml
advent-of-code-2022/d20/: Cargo.toml
advent-of-code-2022/d21-monkey-math/: Cargo.toml
advent-of-code-2022/d22/: Cargo.toml
advent-of-code-2023/: README.md
advent-of-code-2023/d01-trebuchet/: Cargo.toml
advent-of-code-2023/d02/: README.md
advent-of-code-2023/d02-cube-conundrum/: Cargo.toml
advent-of-code-2023/d03-gear-ratios/: Cargo.toml
advent-of-code-2023/d04/: README.md
advent-of-code-2023/d04-scratchcards/: Cargo.toml
advent-of-code-2023/d05/: Cargo.toml
advent-of-code-2023/d05-if-you-give-a-seed-a-fertilizer/: Cargo.toml
advent-of-code-2023/d06-wait-for-it/: Cargo.toml
advent-of-code-2023/d07/: perf.data  perf.data.old
advent-of-code-2023/d07-camel-cards/: Cargo.toml
advent-of-code-2023/d09/: README.md
advent-of-code-2023/d12/: README.md
advent-of-code-2023/d14/: README.md
advent-of-code-2023/d23/: README.md
aoc/: Cargo.toml
aoc-macro/: Cargo.toml
aoc-macro/src/: lib.rs
aoc/src/: get_mut.rs  iterstuff.rs  lib.rs  product.rs  stringstuff.rs  time.rs  tree.rs  unionfind.rs
d01/: README.md
d01-calorie-counting/src/: main.rs
d01/src/: main.rs
d02-rock-paper-scissors/src/: main.rs
d02/src/: main.rs
d03/: Cargo.toml  README.md
d03-rucksack-reorganization/src/: main.rs
d03/src/: main.rs
d04-camp-cleanup/: Cargo.toml
d04-camp-cleanup/src/: main.rs
d05/: README.md
d05-supply-stacks/src/: main.rs
d06/: Cargo.toml  README.md
d06-lanternfish/: day6
d06-tuning-trouble/src/: main.rs
d06/src/: main.rs
d07/: Cargo.toml  README.md
d07-the-treachery-of-whale/: speed.py
d07/src/: main.rs
d08/: Cargo.toml  README.md
d08-treetop-tree-house/src/: main.rs
d08/src/: main.rs
d09-rope-bridge/: Cargo.toml
d09-rope-bridge/src/: main.rs
d09-smoke-basin/: main2.py
d09/src/: main.rs
d1-sonar-sweep/: sonar.go
d10/: README.md  main.go  main.py
d10-cathode-ray-tube/: Cargo.toml
d10-cathode-ray-tube/src/: main.rs
d11/: README.md  main.go
d11-monkey-in-the-middle/: Cargo.toml
d12/: main.py
d13/: README.md
d14/: main.go
d15/: README.md
d15-chiton/: main.go  priorityqueue.go
d16/: README.md
d16-packet-decoder/: main.go
d16-proboscidea-volcanium/src/: main.rs
d17/: README.md
d18/: README.md
d18-2021/src/: main.rs
d19/: README.md
d2-dive/: part1.py
d20/: README.md
d21/: README.md
d22/: README.md
d22-reactor-reboot/: main.go
d23/: main.go
d24/: README.md
d25/: README.md
d3-binary-diagnostic/: diagnostic.go
d5/: day5pt1.py
d7/: main.py  speed.py
d8/: main2.py
d9-smoke-basin/: main.py
inputs/: .gitignore
y21/d02-dive/: dive.go
y22/: README.md
y23/: README.md
(+168 files in other folders)
