[workspace]
resolver = "2"
members = [
    "aoc",
    "d01-calorie-counting",
    "d02-rock-paper-scissors",
    "d03-rucksack-reorganization",
    "d04-camp-cleanup",
    "d05-supply-stacks",
    "d06-tuning-trouble",
    "d07-no-space-left-on-device",
    "d08-treetop-tree-house",
    "d09-rope-bridge",
    "d10-cathode-ray-tube",
    "d11-monkey-in-the-middle",
    "d12-hill-climbing-algorithm",

    "d18-boiling-boulders",

    "d21-monkey-math",

]
