[workspace]
resolver = "2"
members = [
    "aoc",
    "aoc-macro",

    "advent-of-code-2022/d01-calorie-counting",
    "advent-of-code-2022/d02-rock-paper-scissors",
    "advent-of-code-2022/d03-rucksack-reorganization",
    "advent-of-code-2022/d04-camp-cleanup",
    "advent-of-code-2022/d05-supply-stacks",
    "advent-of-code-2022/d06-tuning-trouble",
    "advent-of-code-2022/d07-no-space-left-on-device",
    "advent-of-code-2022/d08-treetop-tree-house",
    "advent-of-code-2022/d09-rope-bridge",
    "advent-of-code-2022/d10-cathode-ray-tube",
    "advent-of-code-2022/d11-monkey-in-the-middle",
    "advent-of-code-2022/d12-hill-climbing-algorithm",
    "advent-of-code-2022/d13",
    "advent-of-code-2022/d14-regolith-reservoir",
    "advent-of-code-2022/d15",
    "advent-of-code-2022/d16-proboscidea-volcanium",
    "advent-of-code-2022/d17",
    "advent-of-code-2022/d18-boiling-boulders",
    "advent-of-code-2022/d19",
    "advent-of-code-2022/d20",
    "advent-of-code-2022/d21-monkey-math",
    "advent-of-code-2022/d22",
    "advent-of-code-2022/d23",
    "advent-of-code-2022/d24",
    "advent-of-code-2022/d25",

    "advent-of-code-2023/d01",
    "advent-of-code-2023/d02",
    "advent-of-code-2023/d03",
    "advent-of-code-2023/d04",
    "advent-of-code-2023/d05",
    "advent-of-code-2023/d06",
    "advent-of-code-2023/d07",
    "advent-of-code-2023/d08",
    "advent-of-code-2023/d09",
    "advent-of-code-2023/d10",
    "advent-of-code-2023/d11",
    "advent-of-code-2023/d12",
    "advent-of-code-2023/d13",
    "advent-of-code-2023/d14",
    "advent-of-code-2023/d15",
    "advent-of-code-2023/d16",
    "advent-of-code-2023/d17",
    "advent-of-code-2023/d18",
    "advent-of-code-2023/d19",
    "advent-of-code-2023/d20",
    "advent-of-code-2023/d21",
    "advent-of-code-2023/d22",
    "advent-of-code-2023/d23",
    "advent-of-code-2023/d24",
    "advent-of-code-2023/d25",
]