[workspace]
resolver = "2"
members = [
    "aoc",
    "aoc-macro",

    "y22/d01-calorie-counting",
    "y22/d02-rock-paper-scissors",
    "y22/d03-rucksack-reorganization",
    "y22/d04-camp-cleanup",
    "y22/d05-supply-stacks",
    "y22/d06-tuning-trouble",
    "y22/d07-no-space-left-on-device",
    "y22/d08-treetop-tree-house",
    "y22/d09-rope-bridge",
    "y22/d10-cathode-ray-tube",
    "y22/d11-monkey-in-the-middle",
    "y22/d12-hill-climbing-algorithm",
    "y22/d13-distress-signal",
    "y22/d14-regolith-reservoir",
    "y22/d15",
    "y22/d16-proboscidea-volcanium",
    "y22/d17-pyroclastic-flow",
    "y22/d18-boiling-boulders",
    "y22/d19",
    "y22/d20",
    "y22/d21-monkey-math",
    "y22/d22",
    "y22/d23",
    "y22/d24",
    "y22/d25",

    "y23/d01-trebuchet",
    "y23/d02-cube-conundrum",
    "y23/d03-gear-ratios",
    "y23/d04-scratchcards",
    "y23/d05-if-you-give-a-seed-a-fertilizer",
    "y23/d06-wait-for-it",
    "y23/d07-camel-cards",
    "y23/d08-brute-forced",
    "y23/d08-haunted-wasteland",
    "y23/d09-mirage-maintenance",
    "y23/d10-pipe-maze",
    "y23/d11-cosmic-expansion",
    "y23/d12-hot-springs",
    "y23/d13-point-of-incidence",
    "y23/d14-parabolic-reflector-dish",
    "y23/d15-lens-library",
    "y23/d16-the-floor-will-be-lava",
    "y23/d17",
    "y23/d18",
    "y23/d19",
    "y23/d20",
    "y23/d21",
    "y23/d22",
    "y23/d23",
    "y23/d24",
    "y23/d25",

    "y24/d01-historian-hysteria",
    "y24/d05-print-queue",
    "y24/d06-guard-gallivant",
    "y24/d07-bridge-repair",
    "y24/d08-resonant-collinearity",
    "y24/d09-disk-fragmenter",
    "y24/d10-hoof-it",
    "y24/d12-garden-groups",
    "y24/d13-claw-contraption",
    "y24/d14-restroom-redoubt",
    "y24/d17-chronospatial-computer",

    "y25/d06-trash-compactor",
]
